# RStream

./: Cargo.toml  readme.md
src/: audio.rs  lib.rs  protocol.rs
src/audio/: cpal.rs  file.rs  mod.rs  wav.rs
src/client/: client_manager.rs  main.rs
src/network/: common.rs  file.rs  mod.rs
src/server/: main.rs  mod.rs  server_manager.rs
tests/: client_server.rs  test.sh
