[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[package]
name = "streamapp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive"] }
cpal = "0.16.0"
futures = "0.3.31"
hound = "3.5.1"
serde = { version = "1.0.227", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
